package sample;

public enum Suit {
    SPADES,
    HEARTS,
    DIAMONDS,
    CLUBS
}
