@startuml

title __BLACKJACKGAME2's Class Diagram__\n

  namespace sample {
    class sample.Card {
    }
  }
  

  namespace sample {
    class sample.Controller {
    }
  }
  

  namespace sample {
    class sample.Dealer {
    }
  }
  

  namespace sample {
    class sample.Deck {
    }
  }
  

  namespace sample {
    class sample.Game {
    }
  }
  

  namespace sample {
    class sample.Hand {
    }
  }
  

  namespace sample {
    class sample.Main {
    }
  }
  

  namespace sample {
    class sample.Player {
    }
  }
  

  namespace sample {
    class sample.Shuffle {
    }
  }
  

  namespace sample {
    enum Suit {
    }
  }
  

  namespace sample {
    enum Value {
    }
  }
  

  sample.Card o-- sample.Suit : suit
  sample.Card o-- sample.Value : value
  sample.Dealer -up-|> sample.Player


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
